# bluebattery.py

./: CHARACTERISTICS.md  README.md  asDaemon.md  asDeamon.md  cli.py  mqtt.py  pyproject.toml  setup.py
assets/: bb.service
bluebattery/: bbcharacteristics.py  bbdevice.py  characteristics.py  cli.py  commands.py  conversions.py  device.py  frametypes.py  protocol.py  scanconnect.py
bluebattery/humble/: bledevice.py  characteristics.py  scanner.py
bluebattery/output/: log.py  mqtt.py
